# BowlingKata

./: Bowling.cpp  Bowling.h  CMakeLists.txt  tests.cpp
